style: fix the content alignment of elements

--- a/src/components/customs/menus/MenuSettings/styles.sass
+++ b/src/components/customs/menus/MenuSettings/styles.sass
@@ -4,8 +4,9 @@
 // Component styling
 .menu-settings
   display: flex
-  padding-left: 16px
+  align-items: center
   gap: 8px
+  padding-left: 16px
 
   &__item
     position: relative
